gère les retours à la ligne

--- a/static/autrepage.html
+++ b/static/autrepage.html
@@ -1,1 +1,7 @@
-<html><head></head><body>Bonjour c'est Pas arnaud</body></html>
+<html>
+	<head>Rebonjour</head>
+	<body>
+		C'est TOUJOURS ARNAUD !!!!<br>
+		Retourner en <a href="index.html">page d'accueil</a>.
+	</body>
+</html>
