--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,7 @@
-<html><head></head><body>Bonjour c'est Arnaud</body></html>
+<html>
+	<head>Bonjour</head>
+	<body>
+		Bonjour c'est Arnaud.<br>
+		Voici un lien vers <a href="autrepage.html">une autre page</a>.
+	</body>
+</html>
