corrections mais manque encore le masque

--- a/static/ws_client.html
+++ b/static/ws_client.html
@@ -7,7 +7,7 @@
     <body>
         <ul id="res">
         </ul>
-        <input type="input" id="key"></input>
+        <input type="input" id="message"></input>
         <button id="btn_envoi" disabled="true" onclick="envoyer()">Envoyer</button>
         <br>
         <button id="btn_connexion" onclick="connexion()">Connect</button>
