modif pages statiques pour lien vers serveur websocket

--- a/static/autrepage.html
+++ b/static/autrepage.html
@@ -2,6 +2,7 @@
 	<head>Rebonjour</head>
 	<body>
 		C'est TOUJOURS ARNAUD !!!!<br>
+        Aller sur le <a href="ws_client.html">serveur websocket</a>.<br>
 		Retourner en <a href="index.html">page d'accueil</a>.
 	</body>
 </html>
