--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 	<head>Bonjour</head>
 	<body>
 		Bonjour c'est Arnaud.<br>
+        Aller sur le <a href="ws_client.html">serveur websocket</a>.<br>
 		Voici un lien vers <a href="autrepage.html">une autre page</a>.
 	</body>
 </html>
